--- a/404.html
+++ b/404.html
@@ -11,9 +11,21 @@
 
 <html>
   <head>
-    <title>Forms</title>
+    <title>WIP | Forms</title>
+    
+    <style>
+      html, body {
+        height: 100%;
+      }
+      body {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
-    
+    <p>This is a work in progress :(</p>
   </body>
 </html>
