--- a/404.html
+++ b/404.html
@@ -10,22 +10,50 @@
 -->
 
 <html>
-  <head>
-    <title>WIP | Forms</title>
-    
-    <style>
-      html, body {
-        height: 100%;
-      }
-      body {
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
-  </head>
-  <body>
-    <p>This is a work in progress :(</p>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Forms</title>
+
+  <!-- Import Github's styles -->
+  <!--<link href="node_modules/primer-css/build/build.css" rel="stylesheet">-->
+  <!--<link href="node_modules/primer-buttons/build/build.css" rel="stylesheet">-->
+  <!-- Import app styles -->
+  <link href="styles/app.css" rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <a href="/">Forms</a>
+  </header>
+
+  <main>
+    <!-- Content is inserted here -->
+  </main>
+  
+  <div class="lightbox hidden" id="lightbox-view-query">
+    <div class="modal">
+      <!--<h1>Query</h1>-->
+      <!--<span class="close">X</span>-->
+      <!--<p>Submited at DATE</p>-->
+      <!--<table class="query-table">-->
+      <!--  <thead>-->
+      <!--    <th>Key</th><th>Value</th>-->
+      <!--  </thead>-->
+      <!--  <tbody>-->
+      <!--    <tr>-->
+      <!--      <td>_cd_id</td><td>livepreview</td>-->
+      <!--    </tr>-->
+      <!--    <tr>-->
+      <!--      <td>_cd_host</td><td>https://ide.cd.io</td>-->
+      <!--    </tr>-->
+      <!--  </tbody>-->
+      <!--</table>-->
+    </div>
+  </div>
+
+  <!-- All scripts are imported with RequireJS -->
+  <script data-main="scripts/main.js" src="node_modules/requirejs/require.js"></script>
+</body>
+
 </html>
