--- a/404.html
+++ b/404.html
@@ -15,9 +15,6 @@
   <meta charset="utf-8">
   <title>Forms</title>
 
-  <!-- Import Github's styles -->
-  <!--<link href="node_modules/primer-css/build/build.css" rel="stylesheet">-->
-  <!--<link href="node_modules/primer-buttons/build/build.css" rel="stylesheet">-->
   <!-- Import app styles -->
   <link href="styles/app.css" rel="stylesheet">
 </head>
@@ -33,22 +30,7 @@
   
   <div class="lightbox hidden" id="lightbox-view-query">
     <div class="modal">
-      <!--<h1>Query</h1>-->
-      <!--<span class="close">X</span>-->
-      <!--<p>Submited at DATE</p>-->
-      <!--<table class="query-table">-->
-      <!--  <thead>-->
-      <!--    <th>Key</th><th>Value</th>-->
-      <!--  </thead>-->
-      <!--  <tbody>-->
-      <!--    <tr>-->
-      <!--      <td>_cd_id</td><td>livepreview</td>-->
-      <!--    </tr>-->
-      <!--    <tr>-->
-      <!--      <td>_cd_host</td><td>https://ide.cd.io</td>-->
-      <!--    </tr>-->
-      <!--  </tbody>-->
-      <!--</table>-->
+      <!-- And more content is inserted here -->
     </div>
   </div>
 
